applications/openeuler-summary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website-summary
  name: website-summary
