applications/openeuler-summary/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: website-summary
spec:
  selector:
    k8s-app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
