applications/openeuler-summary/summary-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-summary
spec:
  selector:
    component: openeuler-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
