applications/openeuler-summary/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: website-summary-ingress
spec:
  tls:
    - hosts:
        - www.openeuler.org
      secretName: website-summary-tls-secret
  rules:
    - host: www.openeuler.org
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /2021summary
